--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development",
-    "docker:build": "docker build -t fgf-web .",
-    "docker:run": "docker run -p 18080:80 --name fgf-react fgf-web",
-    "docker:stop": "docker rm -f fgf-react"
+    "docker:build": "docker build -t fgf-react .",
+    "docker:run": "docker run -p 18080:80 --name fgf-web fgf-react",
+    "docker:stop": "docker rm -f fgf-web"
   },
   "keywords": [],
   "author": "difgar",
